# bazel-gazelle

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  extend.md  extensions.md  gazelle-reference.md  go.mod  go.sum  go.work  go.work.sum  how-gazelle-works.md
cmd/gazelle/: BUILD.bazel  integration_test.go  main.go  update-repos.go
tests/: BUILD.bazel  tools.bzl
tests/bcr/go_mod/: MODULE.bazel  go.mod  go.sum
tests/bcr/go_work/: MODULE.bazel  go.mod  workspace.go.work
tests/bzlmod/: go_mod_test.bzl
tests/fix_package_proto_name_match/example/: BUILD.out
tests/fix_remove_noop_keep_comments/: BUILD.out  README.md
tests/fix_remove_noop_keep_comments/golang/: BUILD.out
tests/go_add_service_converts_to_grpc/: BUILD.in  BUILD.out  foo.proto
tests/go_alias_kind_alias_kind_around_a_mapped_kind/: BUILD.in  BUILD.out  arguments.txt  file.go
tests/go_alias_kind_existing_aliased_kind_is_indexed_for_deps/: BUILD.in  BUILD.out
tests/go_alias_kind_existing_aliased_kind_is_indexed_for_deps/foo/: BUILD.in
tests/go_config_lang/: BUILD.in  arguments.txt  invisible1.go
tests/go_config_lang/bar/: BUILD.in  BUILD.out
tests/go_config_lang/baz/: BUILD.in  BUILD.out
tests/go_config_lang/pb/: BUILD.out  pb.go
tests/go_config_lang/visible/: BUILD.in  visible.go
tests/go_custom_repo_names_external/: BUILD.out  arguments.txt
tests/go_custom_repo_names_external/main/: WORKSPACE
tests/go_custom_repo_names_main/: BUILD.out  WORKSPACE  foo.go
tests/go_delete_proto_with_deps/: README.md
tests/go_delete_proto_with_deps/foo/: BUILD.in  BUILD.out
tests/go_delete_rules_in_empty_dir/: BUILD.in  arguments.txt
tests/go_empty_go_prefix/: arguments.txt
tests/go_empty_go_prefix/bar/: BUILD.out  bar.go
tests/go_external_only/foo/: BUILD.in  BUILD.out  foo.go  foo_test.go
tests/go_external_vendor/: BUILD.out  WORKSPACE  a.go  arguments.txt
tests/go_find_rules_go_version_with_workspace/: BUILD.in  WORKSPACE  foo_illumos.go
tests/go_fix_and_update_changes_fix/: BUILD.in  BUILD.out  cgo.go
tests/go_fix_and_update_changes_update/: BUILD.out  expectedStderr.txt
tests/go_fix_gazelle/: BUILD.in  BUILD.out  README.md
tests/go_fix_unlinked_cgo_library/: BUILD.in  BUILD.out  arguments.txt
tests/go_fix_workspace_without_gazelle/: README.md  WORKSPACE  arguments.txt  expectedStderr.txt
tests/go_go_generate_proto/proto/: BUILD.in  BUILD.out
tests/go_go_grpc_proto_flag/: BUILD.in  BUILD.out  arguments.txt  foo.proto
tests/go_go_grpc_proto_flag/service/: BUILD.in  BUILD.out  service.proto
tests/go_go_import_visibility/: README.md  WORKSPACE  arguments.txt
tests/go_go_internal_visibility_top_level/: BUILD.in  BUILD.out  README.md  WORKSPACE
tests/go_go_internal_visibility_top_level/buffer/: BUILD.out  buffer.go
tests/go_go_main_library_removed/: BUILD.in
tests/go_keep_deps/: BUILD.in  README.md
tests/go_map_kind/: BUILD.in  BUILD.out  README.md  arguments.txt  root_lib.go
tests/go_map_kind/depend_on_mapped_kind/: BUILD.out  lib.go
tests/go_map_kind/disabled/: BUILD.out  disabled_lib.go
tests/go_map_kind/enabled/: BUILD.in  BUILD.out  enabled_lib.go
tests/go_map_kind_embedded_resolve/: BUILD.in  README.md  arguments.txt
tests/go_map_kind_embedded_resolve/a/: BUILD.out  a.proto
tests/go_map_kind_embedded_resolve/b/: BUILD.out  b.proto
tests/go_map_kind_loop/: BUILD.in  expectedStderr.txt
tests/go_map_kind_loop/dir/: BUILD.in  file.go
tests/go_match_proto_library/proto/: BUILD.in  BUILD.out
tests/go_migrate_proto_rules_fix/: BUILD.in  BUILD.out
tests/go_migrate_proto_rules_update/: BUILD.out  foo.proto
tests/go_migrate_select_from_workspace_to_bzlmod/: BUILD.in  BUILD.out  MODULE.bazel  README.md  arguments.txt
tests/go_migrate_select_from_workspace_to_bzlmod/outer/: outer.go
tests/go_migrate_select_from_workspace_to_bzlmod/outer_android_build_tag/: outer.go
tests/go_migrate_select_from_workspace_to_bzlmod/outer_android_suffix/: outer.go
tests/go_minimal_module_compatibility_aliases/: BUILD.out  README.md  arguments.txt  go.mod
tests/go_minimal_module_compatibility_aliases/bar/: BUILD.out
tests/go_multiple_directories/: README.md  arguments.txt
tests/go_multiple_directories/a/: BUILD.out
tests/go_multiple_directories/b/: BUILD.out  b.go
tests/go_no_go_prefix_arg_or_rule/: BUILD.out  expectedStderr.txt  hello.go
tests/go_no_index/: README.md  arguments.txt
tests/go_no_index/foo/: BUILD.out
tests/go_no_index_no_recurse/: README.md  arguments.txt
tests/go_no_index_recurse/: README.md  arguments.txt
tests/go_platform_specific_embedsrcs/: BUILD.in  BUILD.out  foo.go
tests/go_proto_file_mode/: BUILD.in  BUILD.out  foo.proto
tests/go_proto_file_mode_remove_go_default_library/: BUILD.in  BUILD.out  arguments.txt  bar.go  bar.proto
tests/go_proto_import_prefix/: BUILD.in  BUILD.out  arguments.txt
tests/go_quoted_embedsrcs/: BUILD.in  BUILD.out  README.md  foo.go
tests/go_remove_proto_deletes_rules/: BUILD.in  BUILD.out  arguments.txt
tests/go_resolve_go_static_from_go_mod/: BUILD.out  README.md  arguments.txt  go.mod  use.go
tests/go_resolve_kept_importpath/: README.md  arguments.txt
tests/go_resolve_vendor_subdirectory/: README.md
tests/go_resolve_with_empty_repo_name/: BUILD.out  MODULE.bazel  README.md  WORKSPACE  arguments.txt
tests/go_select_labels_sorted/: BUILD.in  BUILD.out  README.md  bar.go  foo.go  foo_android.go  foo_android_build_tag.go
tests/go_subdirectory_prefix_external/: README.md
tests/package_at_top/: BUILD.in  BUILD.out  README.md
tests/package_rule_features_with_visibility/: BUILD.in  BUILD.out  README.md
tests/package_rule_keep_preserves_features/: BUILD.in  BUILD.out
tests/package_rule_new_features/: BUILD.in  BUILD.out  README.md
tests/package_rule_preserves_existing_features/: BUILD.in  BUILD.out  README.md
tests/package_rule_preserves_existing_visibility/: BUILD.in  BUILD.out  README.md
tests/update_remove_noop_keep_comments/: README.md  arguments.txt
v2/: BUILD.bazel  go.mod
v2/cmd/: BUILD.bazel
v2/internal/: BUILD.bazel
(+161 files in other folders)
