load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

gazelle_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    # keep
    srcs = [
        "main.go",
        "update-repos.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//internal/wspace",
        "//label",
        "//language",
        "//language/bazel/visibility",
        "//language/go",
        "//language/proto",
        "//merger",
        "//repo",
        "//rule",
        "//v2/cmd/gazelle/update",
    ],
)

go_test(
    name = "gazelle_test",
    size = "small",
    srcs = [
        "diff_test.go",
        "fix_test.go",
        "integration_test.go",
        "langs.go",  # keep
    ],
    data = [
        "@go_sdk//:ROOT",
        "@go_sdk//:files",
    ],
    embed = [":gazelle_lib"],
    x_defs = {"goRootFile": "$(rlocationpath @go_sdk//:ROOT)"},
    deps = [
        "//internal/wspace",
        "//testtools",
        "@com_github_google_go_cmp//cmp",
        "@io_bazel_rules_go//go/runfiles",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "diff_test.go",
        "fix_test.go",
        "integration_test.go",
        "langs.go",
        "main.go",
        "update-repos.go",
    ],
    visibility = ["//visibility:public"],
)
