load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

gazelle_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "langs.go",
        "main.go",
        "//v2/cmd/gazelle/update:all_files",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    # keep
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bazel-gazelle/v2/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//language",
        "//language/bazel/visibility",
        "//language/go",
        "//language/proto",
        "//v2/cmd/gazelle/update",
    ],
)
